--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<h1>Shakira's fanpage</h1>
-<h2><u><strong>Humanitaire</strong></u></strong></h2>
-<p>Pendant toute sa vie, Shakira se combattra pour les enfants.</p>
-<p>A 18 ans, Shakira crée sa fondation nommée <i>Pies Descalzos</i> (comme le nom de son 3ème album) en faveur des enfants colombiens défavorisés. Avec cette association, elle finance l'ouverture de 6 écoles en Colombie. A 26 ans, elle devient la plus jeune ambassadrice de l'Unicef. 3 ans plus tard, elle est récompensée pour son travail humanitaire par l’ONU.</p>
-<p>Durant la coupe du monde de football de 2010, elle devient l’ambassadrice d’une campagne visant à assurer l’éducation aux enfants non scolarisés de tous horizons, nommée <i>1Goal : Education for All</i>.
-</p>
+<h2></strong>Jeunesse</strong></h2>
+Shakira, de son nom complet Shakira Isabel Mebarak Ripoll, née le 2 février 1977 à Barranquilla (Colombie), est une auteure-compositrice-interprète colombienne.
+Sa langue maternelle est l'espagnol, mais elle parle aussi l'anglais, le portugais et comprend le français.
+Dans l'âge de huit ans, elle compose sa première chanson, < I > Tus gafas oscuras </I>, dédiée à son père.
+En 1996 son album < I > « Pies descalsos » </I> lui a donné une visibilité importante en Amérique latine et en Espagne.
