--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<h1>Shakira's fanpage</h1>
-<h2><u><strong>Humanitaire</strong></u></strong></h2>
-<p>Pendant toute sa vie, Shakira se combattra pour les enfants.</p>
-<p>A 18 ans, Shakira crée sa fondation nommée <i>Pies Descalzos</i> (comme le nom de son 3ème album) en faveur des enfants colombiens défavorisés. Avec cette association, elle finance l'ouverture de 6 écoles en Colombie. A 26 ans, elle devient la plus jeune ambassadrice de l'Unicef. 3 ans plus tard, elle est récompensée pour son travail humanitaire par l’ONU.</p>
-<p>Durant la coupe du monde de football de 2010, elle devient l’ambassadrice d’une campagne visant à assurer l’éducation aux enfants non scolarisés de tous horizons, nommée <i>1Goal : Education for All</i>.
-</p>
+<h2><u><strong>Vie personnelle</strong></u></h2>
+<p>En 2000,<strong> Shakira</strong> rencontre <strong>Antonio de la Rúa</strong>, le fils de l'ancien président d'Argentine <strong>Fernando de la Rúa</strong>, qui devient son compagnon. Il joue un rôle important dans la carrière de <strong>Shakira</strong>, notamment en 2008, en négociant un contrat d'exclusivité de 10 ans avec <i>Live Nation</i> pour 70 à 100 millions de dollars. Ils se séparent en août 2010 après 10 années de vie commune.</p>
+
+<p>Durant l'été 2010, <strong>Shakira</strong> rencontre le footballeur espagnol <strong>Gerard Piqué</strong> sur le tournage de son clip <i>Waka Waka</i>. Le 29 mars 2011, elle confirme leur relation sur Twitter.</p>
+
+<p>En septembre 2012, <strong>Shakira</strong> annonce qu'ils attendent leur premier enfant. Le 22 janvier 2013, elle donne naissance à un garçon, <strong>Milan Piqué Mebarak</strong>. Puis, le 29 janvier 2015 naît leur deuxième fils, <strong>Sasha Piqué Mebarak</strong>.</p>
