--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-<h2><u><strong>Vie personnelle</strong></u></h2>
-<p>En 2000,<strong> Shakira</strong> rencontre <strong>Antonio de la Rúa</strong>, le fils de l'ancien président d'Argentine <strong>Fernando de la Rúa</strong>, qui devient son compagnon. Il joue un rôle important dans la carrière de <strong>Shakira</strong>, notamment en 2008, en négociant un contrat d'exclusivité de 10 ans avec <i>Live Nation</i> pour 70 à 100 millions de dollars. Ils se séparent en août 2010 après 10 années de vie commune.</p>
+<h1><u>Shakira</h1></u>
 
-<p>Durant l'été 2010, <strong>Shakira</strong> rencontre le footballeur espagnol <strong>Gerard Piqué</strong> sur le tournage de son clip <i>Waka Waka</i>. Le 29 mars 2011, elle confirme leur relation sur Twitter.</p>
+<h2><u>Biographie de la madame</u></h2>
 
-<p>En septembre 2012, <strong>Shakira</strong> annonce qu'ils attendent leur premier enfant. Le 22 janvier 2013, elle donne naissance à un garçon, <strong>Milan Piqué Mebarak</strong>. Puis, le 29 janvier 2015 naît leur deuxième fils, <strong>Sasha Piqué Mebarak</strong>.</p>
-<h1>Shakira's fanpage</h1>
-<h2><u><strong>Humanitaire</strong></u></strong></h2>
-<p>Pendant toute sa vie, Shakira se combattra pour les enfants.</p>
-<p>A 18 ans, Shakira crée sa fondation nommée <i>Pies Descalzos</i> (comme le nom de son 3ème album) en faveur des enfants colombiens défavorisés. Avec cette association, elle finance l'ouverture de 6 écoles en Colombie. A 26 ans, elle devient la plus jeune ambassadrice de l'Unicef. 3 ans plus tard, elle est récompensée pour son travail humanitaire par l’ONU.</p>
+<h3><u><strong>Jeunesse</strong></u></h3>
+<strong>Sakira</strong>, de son nom complet Shakira Isabel Mebarak Ripoll, née le 2 février 1977 à Barranquilla en Colombie, est une auteure-compositrice-interprète.
+Sa langue maternelle est l'espagnol, mais elle parle aussi l'anglais, le portugais et comprend le français.
+Dès l'âge de huit ans, elle compose sa première chanson, <i>Tus gafas oscuras</i>, dédiée à son père.
+En 1996, son album <i>Pies descalsos</i> lui a donné une visibilité importante en Amérique latine et en Espagne.
+
+<h3><u><strong>Vie personnelle</strong></u></h3>
+<p>En 2000,<strong> Shakira</strong> rencontre Antonio de la Rúa, le fils de l'ancien président d'Argentine Fernando de la Rúa, qui devient son compagnon. Il joue un rôle important dans la carrière de <strong>Shakira</strong>, notamment en 2008, en négociant un contrat d'exclusivité de 10 ans avec <i>Live Nation</i> pour 70 à 100 millions de dollars. Ils se séparent en août 2010 après 10 années de vie commune.</p>
+<p>Durant l'été 2010, <strong>Shakira</strong> rencontre le footballeur espagnol Gerard Piqué sur le tournage de son clip <i>Waka Waka</i>. Le 29 mars 2011, elle confirme leur relation sur Twitter.</p>
+<p>En septembre 2012, <strong>Shakira</strong> annonce qu'ils attendent leur premier enfant. Le 22 janvier 2013, elle donne naissance à un garçon, Milan Piqué Mebarak. Puis, le 29 janvier 2015 naît leur deuxième fils, Sasha Piqué Mebarak.</p>
+
+<h3><u><strong>Style musical et influences</u></h3></strong>
+<p>Sa langue maternelle est l'<strong>espagnol</strong>, mais elle parle aussi couramment l'<strong>anglais</strong>, le <strong>portugais</strong>, et sait également s'exprimer en <strong>français</strong> et a des notions d'<strong>italien</strong> et d'<strong>arabe</strong>.</p> Célèbre pour mélanger différents types de musique, comme le folk, la pop ou encore le rock. Ayant grandi en écoutant beaucoup de musique orientale, celle-ci influence bon nombre de ses œuvres, comme <i>Ojos así</i>. Elle choisit également un thème indien pour sa performance de <i>Hips Don't Lie</i> aux MTV Video Music Awards. Elle avoue d'ailleurs que « beaucoup de mes mouvements appartiennent à la culture arabe ».
+
+<h3><u><strong>Humanitaire</strong></u></h3>
+<p>Pendant toute sa vie, <strong>Shakira</strong> combattra pour les enfants.</p>
+<p>À 18 ans, <strong>Shakira</strong> crée sa fondation nommée <i>Pies Descalzos</i> (comme le nom de son 3ème album) en faveur des enfants colombiens défavorisés. Avec cette association, elle finance l'ouverture de 6 écoles en Colombie. À 26 ans, elle devient la plus jeune ambassadrice de l'Unicef. 3 ans plus tard, elle est récompensée pour son travail humanitaire par l’ONU.</p>
 <p>Durant la coupe du monde de football de 2010, elle devient l’ambassadrice d’une campagne visant à assurer l’éducation aux enfants non scolarisés de tous horizons, nommée <i>1Goal : Education for All</i>.
 </p>
-<h2></strong>Jeunesse</strong></h2>
-Shakira, de son nom complet Shakira Isabel Mebarak Ripoll, née le 2 février 1977 à Barranquilla (Colombie), est une auteure-compositrice-interprète colombienne.
-Sa langue maternelle est l'espagnol, mais elle parle aussi l'anglais, le portugais et comprend le français.
-Dans l'âge de huit ans, elle compose sa première chanson, < I > Tus gafas oscuras </I>, dédiée à son père.
-En 1996 son album < I > « Pies descalsos » </I> lui a donné une visibilité importante en Amérique latine et en Espagne.
-<h2><u>Style musical et influences</u></h2>
-<p>Sa langue maternelle est l'<strong>espagnol</strong>, mais elle parle aussi couramment l'<strong>anglais</strong>, le <strong>portugais</strong>, et sait également s'exprimer en <strong>français</strong> et a des notions d'<strong>italien</strong> et d'<strong>arabe</strong>.</p> Célèbre pour mélanger différents types de musique, comme le <strong>folk</strong>, la <strong>pop ou encore le rock</strong>. Ayant grandi en écoutant beaucoup de musique orientale, celle-ci influence bon nombre de ses œuvres, comme Ojos así. Elle choisit également un thème indien pour sa performance de Hips Don't Lie aux MTV Video Music Awards. Elle avoue d'ailleurs que « beaucoup de mes mouvements appartiennent à la culture arabe ».
+
+<h2><u>Chansons et paroles</h2></u>
+
