--- a/index.html
+++ b/index.html
@@ -24,3 +24,72 @@ En 1996, son album <i>Pies descalsos</i> lui a donné une visibilité importante
 
 <h2><u>Chansons et paroles</h2></u>
 
+<h3>Ojos Así</h3>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0Z9w8s2l8NM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
+<br><p>Ayer conocí un cielo sin sol</p>
+<p>Y un hombre sin suelo</p>
+<p>Un santo en prisión</p>
+<p>Y una canción triste sin dueño</p></br>
+<br><p>Ya he ya he ya la he</p>
+<p>Y conocí tus ojos negros</p>
+<p>Ya he ya he ya la he</p>
+<p>Y ahora sí que no puedo vivir sin ellos yo</p></br>
+<br><p>Le pido al cielo sólo un deseo</p>
+<p>Que en tus ojos yo pueda vivir</p>
+<p>He recorrido ya el mundo entero</p>
+<p>Y una cosa te vengo a decir</p></br>
+<br><p>Viajé de Bahréin hasta Beirut</p>
+<p>Fui desde el norte hasta el Polo Sur</p>
+<p>Y no encontré ojos así</p>
+<p>Como los que tienes tú</p></br>
+<br><p>Rabboussamai fikarrajaii</p>
+<p>Fi ainaiha aralhayati</p>
+<p>Ati ilaica min haza lkaaouni</p>
+<p>Arjouka labbi labbi nidai</p></br>
+<br><p>Viajé de Bahréin hasta Beirut</p>
+<p>Fui desde el norte hasta el Polo Sur</p>
+<p>Y no encontré ojos así</p>
+<p>Como los que tienes tú</p></br>
+<br><p>Ayer vi pasar una mujer</p>
+<p>Debajo de su camello</p>
+<p>Un río de sal</p>
+<p>Y un barco abandonado en el desierto</p></br>
+<br><p>Ya he ya he ya la he</p>
+<p>Y vi pasar tus ojos negros</p>
+<p>Ya he ya he ya la he</p>
+<p>Y ahora sí que no puedo vivir sin ellos yo</p></br>
+<br><p>Le pido al cielo sólo un deseo</p>
+<p>Que en tus ojos yo pueda vivir</p>
+<p>He recorrido ya el mundo entero</p>
+<p>Y una cosa te vengo a decir</p></br>
+<br><p>Viajé de Bahréin hasta Beirut</p>
+<p>Fui desde el norte hasta el Polo Sur</p>
+<p>Y no encontré ojos así</p>
+<p>Como los que tienes tú</p></br>
+<br><p>Rabboussamai fikarrajaii</p>
+<p>Fi ainaiha aralhayati</p>
+<p>Ati ilaica min haza lkaaouni</p>
+<p>Arjouka labbi labbi nidai</p></br>
+<br><p>Viajé de Bahréin hasta Beirut</p>
+<p>Fui desde el norte hasta el Polo Sur</p>
+<p>Y no encontré ojos así</p>
+<p>Como los que tienes tú</p></br>
+<br><p>Rabboussamai fikarrajaii</p>
+<p>Fi ainaiha aralhayati</p>
+<p>Ati ilaica min haza lkaaouni</p>
+<p>Arjouka labbi labbi nidai</p></br>
+<br><p>Min al-Bahrayn ila Beirut</p>
+<p>Fui desde el norte hasta el Polo Sur</p>
+<p>Y no encontré ojos así</p>
+<p>Como los que tienes tú</p></br>
+<br><p>Le pido al cielo sólo un deseo</p>
+<p>Que en tus ojos yo pueda vivir</p>
+<p>He recorrido ya el mundo entero</p>
+<p>Y una cosa te vengo a decir</p></br>
+<br><p>Viajé de Bahréin hasta Beirut</p>
+<p>Fui desde el norte hasta el Polo Sur</p>
+<p>Y no encontré ojos así</p>
+<p>Y no encontré ojos así</p></br>
+<img src=https://wikiimg.tojsiabtv.com/wikipedia/commons/thumb/7/7f/Shakira.JPG/440px-Shakira.JPG alt=”texte alternatif”>
