--- a/index.html
+++ b/index.html
@@ -24,3 +24,81 @@ En 1996, son album <i>Pies descalsos</i> lui a donné une visibilité importante
 
 <h2><u>Chansons et paroles</h2></u>
 
+<h3><u><i>Waka Waka</u></i></h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pRpeEdMmmQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>You're a good soldier</p>
+<p>Choosing your battles</p>
+<p>Pick yourself up and dust yourself off</p>
+<p>And back in the saddle</p>
+
+<br><p>You're on the front line</p>
+<p>Everyone's watching</p>
+<p>You know it's serious, we are getting closer</p>
+<p>This isn't over</p></br>
+
+<p>The pressure's on, you feel it</p>
+<p>But you got it all, believe it</p>
+
+<p>When you fall, get up, oh oh</p>
+<p>And if you fall, get up, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>'Cause this is Africa</p>
+
+<p>Tsamina mina, eh eh</p>
+<p>Waka waka, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>This time for Africa</p>
+
+<p>Listen to your God, this is our motto</p>
+<p>Your time to shine, don't wait in line</p>
+<p>Y vamos por todo</p>
+
+<p>People are raising their expectations</p>
+<p>Go on and feed them, this is your moment</p>
+<p>No hesitations</p>
+
+<p>Today's your day, I feel it</p>
+<p>You paved the way, believe it</p>
+
+<p>If you get down, get up, oh oh</p>
+<p>When you get down, get up, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>This time for Africa</p>
+
+<p>Tsamina mina, eh eh</p>
+<p>Waka waka, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>This time for Africa</p>
+
+<p>Awela majoni biggie biggie mamma one A to zet</p>
+<p>Bathi tsu zala majoni biggie biggie mamma from East to West</p>
+<p>Batsi, waka waka ma, eh eh</p>
+<p>Waka waka ma, eh eh</p>
+<p>Zonke zizwe mazi buye</p>
+<p>'Cause this is Africa</p>
+
+<p>Tsamina mina, anawa ah ah</p>
+<p>Tsamina mina</p>
+<p>Tsamina mina, anawa ah ah</p>
+
+<p>Tsamina mina, eh eh</p>
+<p>Waka waka, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>Anawa, ah ah</p>
+<p>Tsamina mina, eh eh</p>
+<p>Waka waka, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>This time for Africa</p>
+<p>Django, eh eh</p>
+<p>Django, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>Anawa ah ah</p>
+<p>Django, eh eh</p>
+<p>Django, eh eh</p>
+<p>Tsamina mina zangalewa</p>
+<p>Anawa ah ah</p>
+<p>This time for Africa</p>
+<p>This time for Africa</p>
+<p>We're all Africa</p>
+<p>We're all Africa</p>
